fix(#271): indicate simulation failure with http status